--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,10 +1,10 @@
 .filters {
-  color: white;
+  background-color: white;
   height: 70px;
   width: 100%;
   border: 1px #dddddd solid;
   border-radius: 4px;
-  display: grid;
+  display: flex;
 }
 
 .filters button {
@@ -16,7 +16,7 @@
   border: none;
   border-radius: 4px;
   align-self: center;
-  justify-self: flex-end;
+  margin-left: auto;
   margin-right: 30px;
 }
 
